--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -110,6 +110,7 @@ body .column .column-card-list {
   margin: 10px;
   border-radius: 4px;
   min-width: 150px;
+  min-height: 100px;
 }
 
 body .column .btn-delete {
