--- a/sass/style.scss
+++ b/sass/style.scss
@@ -101,6 +101,7 @@ body {
             margin: 10px;
             border-radius: 4px;
             min-width: 150px;
+            min-height: 100px;
         }
         
         .btn-delete {
